Align icons correctly

--- a/paillette/static/style.css
+++ b/paillette/static/style.css
@@ -673,6 +673,7 @@ label,
 #page-spectacles a dl dt {
   clear: left;
   float: left;
+  text-align: center;
   width: 10%;
 }
 
